--- a/app/index.html
+++ b/app/index.html
@@ -350,7 +350,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="900ms">
                     <div class="counters-item">
                         <i class="fa-3x">
-                            <a><img src="../app/img/fastc/Rocket.png" alt="Logo"></a>
+                            <a><img src="../app/img/fastc/Cup.png" alt="Logo"></a>
                         </i>
                         <strong data-to="6454">6454</strong>
                         <p>Awards Won</p>
